# DeskHop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: desktop_manager.rs  main.rs  osd_window.rs  settings.rs
