[package]
name = "deskhop"
version = "0.1.0"
edition = "2021"

[dependencies]
winvd = "0.0.49"
global-hotkey = "0.5.0"
tray-icon = "0.14.3"
winit = "0.29"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
# Windows specific dependencies if any
